--- a/actions/config.ini
+++ b/actions/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-NEWS_API = c8e7e3408c334ca6961f462227a8f73c
-SENDER_EMAIL = weblazze@gmail.com
-PASSWORD = weblaze@123
+NEWS_API = your_news_api
+SENDER_EMAIL = your_email
+PASSWORD = your_password
 EMAIL_SUBJECT = COVID-19 Area Report
